--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- saved from url=(0040)https://buster95.github.io/declaratewey/ -->
+
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeclarateWey</title>
-    <link rel="stylesheet" href="./DeclarateWey_files/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <script src="./DeclarateWey_files/script.js.descarga"></script>
+    <script src="script.js.descarga"></script>
 
 
 </body></html>
