--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <script src="script.js.descarga"></script>
+    <script src="script.js"></script>
 
 
 </body></html>
