--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="container">
         <div class="title">
-            Quieres ser mi novia?
+           ¿Quieres ser mi novia? <3
         </div>
 
         <div class="buttons">
-            <button id="btnyes" class="btn">Si</button>
+            <button id="btnyes" class="btn">Si<3</button>
             <button id="btnno" class="btn">No</button>
         </div>
     </div>
