--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 
     <script src="script.js"></script>
 
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 
 </body></html>
