--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Animate Gradient in React</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <title>CodePen - Animate Gradient in React</title> 
 	<link rel="stylesheet" href="./style.css">
  
 
 </head>
 <body>
+
  <div class="container">
         <div class="title">
            	 ¿Quieres ser mi novia? 
@@ -21,12 +21,9 @@
     </div>
  
 
-<!-- partial:index.partial.html -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300" type="text/css" />
-
-<div id="app"></app>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/react.min.js'></script><script  src="./script.js"></script>
+<!-- partial:index.partial.html --> 
+ 
+<!-- partial --> <script  src="./script.js"></script>
 
 </body>
 </html>
