--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Animate Gradient in React</title> 
-	<link rel="stylesheet" href="./style.css">
- 
-
+<!-- saved from url=(0040)https://buster95.github.io/declaratewey/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DeclarateWey</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
- <div class="container">
+<body>
+    <div class="container">
         <div class="title">
-           	 ¿Quieres ser mi novia? 
+            ¿Quieres ser mi novia?
         </div>
 
         <div class="buttons">
@@ -19,11 +18,8 @@
             <button id="btnno" class="btn">No</button>
         </div>
     </div>
- 
 
-<!-- partial:index.partial.html --> 
- 
-<!-- partial --> <script  src="./script.js"></script>
+    <script src="script.js"></script>
 
-</body>
-</html>
+
+</body></html>
